--- a/PAUP_QA-master/QA/Content/style.css
+++ b/PAUP_QA-master/QA/Content/style.css
@@ -41,24 +41,30 @@ li {
     line-height: 45px;
     margin-left: 20px;
     color: #fff;
+    transition: 0.3s;
 }
 
+    li a:hover {
+        color: #000;
+        transition: 0.3s;
+    }
+
 .search-section {
-    display: block;
+    display: flex;
     padding: 30px 0;
 }
 
 .search-box {
     width: 400px;
     height: 40px;
-    margin: 0 auto;
+    margin-left: 30%;
     border: 1.5px solid #494985;
     border-radius: 3px;
 }
 
 .search-input {
     height: 20px;
-    width: 73%;
+    width: 70%;
     margin-top: 8px;
     background-color: transparent;
     border: none;
@@ -66,15 +72,14 @@ li {
     color: #494985;
 }
 
-.search-input:focus {
-    outline: none;
-}
+    .search-input:focus {
+        outline: none;
+    }
 
 ::placeholder {
     color: #494985;
     opacity: 0.8;
 }
-
 .search-btn {
     width: 25%;
     padding: 4px 0;
@@ -86,6 +91,7 @@ li {
     color: #fff;
     font-weight: 700;
     margin-top: 2px;
+    transition: 0.3s;
 }
 
 .question-container {
@@ -107,11 +113,11 @@ li {
 .questions {
     margin-top: 30px;
     height: 45vh;
-    overflow-y: scroll;
+    overflow:auto;
 }
 
 .question-box {
-    padding: 18px 0;
+    padding: 15px 0;
     margin: 10px 0;
     cursor: pointer;
     width: 100%;
@@ -162,12 +168,12 @@ p a {
     background-color: #636e72;
 }
 
-.category-container {
+/*.category-container {
     width: 50%;
     margin: 30px 25%;
     background-color: #494985;
     padding: 10px 5px;
-}
+}*/
 
 .row {
     display: flex;
@@ -234,12 +240,30 @@ p a {
     font-size: 12px;
 }
 
+.validacija {
+    color: red;
+    margin-left: 10%;
+    margin-top: 15px;
+    font-size: 12px;
+}
+
 .login-form a {
     color: #000;
     font-weight: 700;
 }
 
-.form-section button{
+.login-form select {
+    width: 80%;
+    height: 45px;
+    padding-left: 5px;
+    border: none;
+    margin: 5px 10%;
+    background-color: #e6e3e3;
+    border-radius: 2px;
+}
+
+
+.form-section button {
     width: 80%;
     margin: 25px 10%;
     border: none;
@@ -251,7 +275,13 @@ p a {
     font-weight: 700;
     color: white;
     border-radius: 2px;
+    transition: 0.3s;
 }
+
+    .form-section button:hover {
+        background-color: #f5d44f;
+        transition: 0.3s;
+    }
 
 /* REGISTRATION */
 label {
@@ -337,10 +367,58 @@ label {
     margin: 10px 30px;
 }
 
+.buttons-box {
+    display: flex;
+    width: 60%;
+    margin-left: 15px;
+}
+
+.update {
+    background-color: #bdc3c7;
+    width: 45%;
+    height: 35px;
+    border: none;
+    border-radius: 3px;
+    transition: 0.3s;
+    margin-right: 10px;
+    transition: 0.3s;
+    color: #fff;
+    cursor: pointer;
+}
+
+    .update:hover {
+        background-color: #7f8c8d;
+        transition: 0.3s;
+    }
+
+.delete {
+    background-color: #e74c3c;
+    width: 45%;
+    height: 35px;
+    border: none;
+    border-radius: 3px;
+    transition: 0.3s;
+    color: #fff;
+    cursor: pointer;
+}
+
+    .delete:hover {
+        background-color: #c0392b;
+        transition: 0.3s;
+    }
+
 .no-answers {
     text-align: center;
     margin-top: 50px;
     font-size: 25px;
+}
+
+.question {
+    width: 90%;
+    margin: 10px 1%;
+    padding: 20px 10px;
+    border-bottom: 1px solid black;
+    text-align: left;
 }
 
 .num-of-answ {
@@ -357,7 +435,7 @@ label {
 
 .answers {
     height: 50vh;
-    overflow-y: scroll;
+    overflow:auto;
 }
 
 .answer {
@@ -366,6 +444,14 @@ label {
     padding: 20px 10px;
     border-bottom: 1px solid black;
     text-align: left;
+    position: relative;
+}
+
+.answer-buttons-box {
+    position: absolute;
+    bottom: 5px;
+    right: 5px;
+    display: flex;
 }
 
 /*.answer:first-child {
@@ -377,6 +463,56 @@ label {
     background-color: #2ecc71;
     color: #fff;
 }
+
+.best {
+    background-color: #f39c12;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    width: 80px;
+    height: 25px;
+    cursor: pointer;
+    transition: 0.3s;
+    margin-right: 3px;
+}
+
+    .best:hover {
+        background-color: #f6b753;
+        transition: 0.3s;
+    }
+
+.update-answ {
+    background-color: #bdc3c7;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    width: 80px;
+    height: 25px;
+    cursor: pointer;
+    transition: 0.3s;
+    margin-right: 3px;
+}
+
+    .update-answ:hover {
+        background-color: #7f8c8d;
+        transition: 0.3s;
+    }
+
+.delete-answ {
+    background-color: #e74c3c;
+    color: #fff;
+    border: none;
+    border-radius: 3px;
+    width: 80px;
+    height: 25px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+    .delete-answ:hover {
+        background-color: #c0392b;
+        transition: 0.3s;
+    } 
 
 .answer-form {
     float: right;
@@ -407,6 +543,19 @@ label {
     cursor: pointer;
 }
 
+.btn-odgovor {
+    width: 100px;
+    height: 35px;
+    line-height: 35px;
+    text-align: center;
+    font-size: 15px;
+    text-transform: uppercase;
+    border: none;
+    background-color: #494985;
+    color: #fff;
+    cursor: pointer;
+}
+
 textarea:focus {
     outline: none;
 }
@@ -416,4 +565,317 @@ textarea:focus {
 }
 .text-danger {
     color: red;
+}
+
+.search-btn:hover {
+    background-color: #6767ab;
+    transition: 0.3s;
+}
+
+.category-select {
+    width: 200px;
+    margin-left: 7%;
+    height: 42px;
+    border: 1px solid #494985;
+    border-radius: 3px;
+    color: #494985;
+    font-weight: 700;
+    cursor: pointer;
+    position:absolute;
+}
+
+/* Responsive mobile */
+@media (min-width: 300px) and (max-width: 750px) {
+    body, html {
+        font-size: 15px;
+    }
+
+    header {
+        text-align: center;
+    }
+
+    nav {
+        margin-left: 0px;
+    }
+
+    li {
+        margin-right: 20px;
+    }
+
+    .search-box {
+        width: 80%;
+        margin-left: 10px;
+    }
+
+    .category-select {
+        margin-right: 10px;
+    }
+
+    .search-input {
+        width: 65%;
+    }
+
+    .question-container {
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    .questions {
+        margin-top: 30px;
+        height: 45vh;
+        overflow:auto;
+    }
+
+    .question-box {
+        width: 95%;
+    }
+
+    .question-text {
+        margin-left: 10px;
+        width: 80%;
+    }
+
+    .answers-num {
+        margin-top: 20px;
+        margin-left: 8px;
+    }
+
+    .num {
+        width: 25px;
+        height: 25px;
+        margin-left: 3px;
+        margin-top: 15px;
+        line-height: 25px;
+        font-size: 10px;
+        text-align: center;
+    }
+
+    /*  QUESTION BLOCK */
+    .question-block {
+        width: 90%;
+        height: 90vh;
+        overflow:auto;
+    }
+
+    .header h1 {
+        font-size: 15px;
+        width: 70%;
+    }
+
+    .close {
+        right: 10px;
+    }
+
+    .answers-main-section {
+        display: block;
+        width: 100%;
+    }
+
+    .no-answers {
+        text-align: center;
+        margin-top: 50px;
+        font-size: 25px;
+    }
+
+    .num-of-answ {
+        font-size: 18px;
+    }
+
+        .num-of-answ span {
+            font-weight: 700;
+        }
+
+    .answ-container {
+        width: 90%;
+        margin: 20px 5%;
+    }
+
+    .answer-form {
+        float: left;
+        margin: 20px;
+        width: 90%;
+    }
+
+    textarea {
+        width: 90%;
+    }
+
+    /* LOGIN PAGE */
+    .form-section {
+        width: 80%;
+    }
+}
+
+/* Responsive tablet/mini-laptop */
+@media (min-width: 750px) and (max-width: 1024px) {
+    body, html {
+        font-size: 16px;
+    }
+
+    header {
+        text-align: center;
+    }
+
+    nav {
+        margin-left: 0px;
+    }
+
+    li {
+        margin-right: 20px;
+    }
+
+    .search-box {
+        width: 50%;
+    }
+
+    .search-input {
+        width: 70%;
+    }
+
+    .question-container {
+        width: 90%;
+        margin-left: 5%;
+    }
+
+    .questions {
+        margin-top: 30px;
+        height: 45vh;
+        overflow:auto;
+    }
+
+    .question-box {
+        width: 95%;
+    }
+
+    .question-text {
+        margin-left: 10px;
+        width: 80%;
+    }
+
+    .answers-num {
+        margin-top: 8px;
+        margin-left: 8px;
+    }
+
+    .num {
+        width: 30px;
+        height: 30px;
+        margin-left: 3px;
+        margin-top: 0px;
+        line-height: 30px;
+        font-size: 12px;
+        text-align: center;
+    }
+
+    .category-container {
+        width: 80%;
+        margin: 30px 10%;
+    }
+
+    .category {
+        height: 40px;
+        line-height: 40px;
+    }
+
+    /*  QUESTION BLOCK */
+    .question-block {
+        width: 90%;
+        height: 90vh;
+        overflow:auto;
+    }
+
+    .header h1 {
+        font-size: 15px;
+        width: 70%;
+    }
+
+    .close {
+        right: 10px;
+    }
+
+    .answers-main-section {
+        display: block;
+        width: 100%;
+    }
+
+    .no-answers {
+        text-align: center;
+        margin-top: 50px;
+        font-size: 25px;
+    }
+
+    .num-of-answ {
+        font-size: 18px;
+    }
+
+        .num-of-answ span {
+            font-weight: 700;
+        }
+
+    .answ-container {
+        width: 90%;
+        margin: 20px 5%;
+    }
+
+    .answer-form {
+        float: left;
+        margin: 20px 50px;
+        width: 70%;
+    }
+
+    textarea {
+        width: 90%;
+    }
+}
+
+@media (min-width: 1024px) and (max-width: 1450px) {
+    /*  QUESTION BLOCK */
+    .question-block {
+        width: 90%;
+        height: 90vh;
+        overflow:auto;
+    }
+
+    .header h1 {
+        font-size: 30px;
+        width: 70%;
+    }
+
+    .close {
+        right: 10px;
+    }
+
+    .answers-main-section {
+        display: block;
+        width: 80%;
+    }
+
+    .no-answers {
+        text-align: center;
+        margin-top: 50px;
+        font-size: 25px;
+    }
+
+    .num-of-answ {
+        font-size: 18px;
+    }
+
+        .num-of-answ span {
+            font-weight: 700;
+        }
+
+    .answ-container {
+        width: 50%;
+        margin: 20px 5%;
+    }
+
+    .answer-form {
+        float: left;
+        margin: 20px 50px;
+        width: 70%;
+    }
+
+    textarea {
+        width: 90%;
+    }
 }
