--- a/PAUP_QA-master/QA/Views/App/_PartialOdgovor.cshtml
+++ b/PAUP_QA-master/QA/Views/App/_PartialOdgovor.cshtml
@@ -5,13 +5,13 @@
 @using (Html.BeginForm("DodajOdgovor", "App", FormMethod.Post, new { @class = "answer-form" }))
 {
     @Html.AntiForgeryToken()
-    @Html.ValidationMessageFor(m => m.odgovor, "", new { @style = "color:red;" })<br />
+    @Html.ValidationMessageFor(m => m.odgovor, "", new { @style = "color:red; font-size:14px;" })<br />
     @Html.TextAreaFor(m => m.odgovor, new { @placeholder = "Upiši odgovor..." })
     @Html.HiddenFor(m => m.datumObjave, new { Value = DateTime.Now.ToString("dd'/'MM'/'yyyy HH: mm:ss") })
     @Html.HiddenFor(m => m.najdraze, new { Value = false })
     @Html.HiddenFor(m => m.korisnicko_ime, new { Value = ViewBag.Korisnik })
     @Html.HiddenFor(m => m.pitanje_id, new { Value = ViewBag.Id })
-    <button type="submit" name="noviOdg">Odgovori</button>
+    <button type="submit" name="noviOdg" class="btn-odgovor">Odgovori</button>
 }
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/jqueryval")
