--- a/PAUP_QA-master/QA/Views/Korisnik/Prijava.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/Prijava.cshtml
@@ -27,7 +27,7 @@
                 @using (Html.BeginForm("Prijava", "Korisnik", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "login-form" }))
                 {
                     @Html.AntiForgeryToken()
-                    @Html.ValidationSummary(false, "", new { @style = "color:red;", @class = "text-danger" })
+                    @Html.ValidationSummary(false, "", new { @style = "color:red; font-size:12px;", @class = "text-danger" })
                     @Html.TextBoxFor(m => m.KorisnickoIme, new { @placeholder = "Korisničko ime..." })
                     @Html.PasswordFor(m => m.Lozinka, new { @placeholder = "Lozinka..." })
                     <p>Nemate profil? @Html.ActionLink("Registracija", "Registracija", "Korisnik")</p>
