--- a/PAUP_QA-master/QA/Views/Korisnik/Registracija.cshtml
+++ b/PAUP_QA-master/QA/Views/Korisnik/Registracija.cshtml
@@ -29,15 +29,15 @@
             @using (Html.BeginForm("Registracija", "Korisnik", FormMethod.Post, new { @class = "login-form" }))
             {
                 @Html.AntiForgeryToken()
-                @Html.ValidationMessageFor(m => m.korisnicko_ime, "", new { @style = "color:red;" })
                 @Html.LabelFor(m => m.korisnicko_ime)
                 @Html.EditorFor(m => m.korisnicko_ime, new { htmlAttributes = new { @placeholder = "Korisničko ime..." } })
-                @Html.ValidationMessageFor(m => m.LozinkaUnos, "", new { @style = "color:red;" })
+                @Html.ValidationMessageFor(m => m.korisnicko_ime, "", new { @class = "validacija" })<br />
                 @Html.LabelFor(m => m.LozinkaUnos)
                 @Html.EditorFor(m => m.LozinkaUnos, new { htmlAttributes = new { @placeholder = "Lozinka..." } })
-                @Html.ValidationMessageFor(m => m.LozinkaUnos2, "", new { @style = "color:red;" })
+                @Html.ValidationMessageFor(m => m.LozinkaUnos, "", new { @class = "validacija" })<br>
                 @Html.LabelFor(m => m.LozinkaUnos2)
                 @Html.EditorFor(m => m.LozinkaUnos2, new { htmlAttributes = new { @placeholder = "Ponovite lozinku..." } })
+                @Html.ValidationMessageFor(m => m.LozinkaUnos2, "", new { @class = "validacija" })<br />
                 @Html.HiddenFor(m => m.ovlast_sifra, new { Value = OvlastiKorisnik.Registriran })
                 <!---Html.LabelFor(m => m.image)
         <input type="file" name="image" id="fileUpload" accept=".png,.jpg,.jpeg,.gif,.tif" />-->
